--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body{
 .header{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(https://github.com/PRIYANSHUSINGH2003/Internship-netflix-clone-website.github.io/blob/main/images/header-image.png?raw=true);
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(./images/header-image.png);
     background-size: cover;
     background-position: center;
     padding: 10px 8%;
