--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body{
 .header{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(https://github.com/PRIYANSHUSINGH2003/Internship-netflix-clone-website.github.io/blob/main/images/header-image.png?raw=true);
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(/images/header-image.png);
     background-size: cover;
     background-position: center;
     padding: 10px 8%;
@@ -118,6 +118,24 @@ nav button{
     margin-bottom: 20px;
     position: relative;
 }
+.img-video-container{
+    display: inline-grid;
+    text-align: left;
+    align-items: center;
+}
+.img-col .video-img{
+    grid-column: 2/2;
+    grid-row: 1/2;
+}
+.img-col .video-1{
+    position: relative;
+    width: 100%;
+    height: 54%;
+    grid-column: 2/2;
+    grid-row: 1/2;
+    z-index: -1;
+}
+
 .img-col img{
     display: block;
     width: 100%;
