--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,7 @@ nav button{
 .header-content h3{
     font-weight: 400;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 .email-signup{
     background-color: white;
@@ -286,6 +287,7 @@ input[type="radio"]{
     }
     .header-content h1{
         font-size: 30px;
+        line-height:40px;
     }
     .email-signup button{
         font-size: 12px;
