--- a/css/index.css
+++ b/css/index.css
@@ -63,10 +63,11 @@ nav button{
     margin-top: 100px;
 }
 .header-content h1{
-    font-size: 60px;
+    font-size: 32px;
     line-height: 70px;
     font-weight: 600;
     max-width: 650px;
+    text-shadow: 0 0 4px #ffff;
 }
 .header-content h3{
     font-weight: 400;
